infrastructure/mcp-github/mcp-github-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mcp-github
  labels:
    app: mcp-github
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mcp-github
  template:
    metadata:
      labels:
        app: mcp-github
    spec:
      containers:
        - name: mcp-github
          image: ghcr.io/github/github-mcp-server:1.14.0
          imagePullPolicy: IfNotPresent
          args:
            -  http 
            - --port
            - "8080"
            - --base-url 
            - https://mcp-github.mmontes-internal.duckdns.org
            - --base-path 
            - /mcp
            - --toolsets
            - default,stargazers
            - --scope-challenge
          ports:
            - containerPort: 8080
              name: http
          readinessProbe:
            tcpSocket:
              port: 8080
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8080
            periodSeconds: 20
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              memory: "512Mi"
