infrastructure/mcp-github/mcp-github-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mcp-github
spec:
  parentRefs:
    - name: traefik-internal
      namespace: networking
  hostnames:
    - "mcp-github.mmontes-internal.duckdns.org"
  rules:
    - backendRefs:
      - name: mcp-github
        port: 8080
